# pag-kmp

./: build.gradle.kts  settings.gradle.kts
.github/workflows/: build-and-publish.yml  build.yml
example/: build.gradle.kts
example/src/commonMain/kotlin/love/yinlin/libpag/example/: PAGApp.kt
example/src/desktopMain/kotlin/love/yinlin/libpag/example/: Main.kt  PagFileExt.kt  TagCodeUtils.kt
gradle/: libs.versions.toml
pag4j/: build.android.gradle.kts  build.gradle.kts
pag4j/src/main/cpp/: CMakeLists.txt  JNIEnvironment.cpp  JNIHelper.cpp  JNIHelper.h  JPAGFile.cpp  JPAGFont.cpp  JPAGImage.cpp  JPAGLayer.cpp  JPAGPlayer.cpp  NativePlatform.cpp  NativePlatform.h  PAGText.cpp  PAGText.h
pag4j/src/main/java/org/libpag/: LibraryLoadUtils.java  LibraryLoadUtils.kt  PAG.java  PAGComposition.java  PAGFile.java  PAGFont.kt  PAGImage.kt  PAGImageLayer.kt  PAGLayer.java  PAGMarker.kt  PAGPlayer.java  PAGShapeLayer.kt  PAGSurface.java  PAGText.kt  PAGTextLayer.kt  PAGVideoRange.kt
